// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package tokenserver.admin;

import "github.com/luci/luci-go/tokenserver/api/service_account.proto";

// ServiceAccounts is responsible for managing Cloud IAM Service Accounts.
//
// It is callable by the token service itself and by the admins.
service ServiceAccounts {
  // CreateServiceAccount creates Google Cloud IAM service account associated
  // with given host.
  //
  // It uses token server configuration to pick a cloud project and to derive
  // service account ID. See documentation for CertificateAuthorityConfig proto
  // message for more info.
  //
  // This operation is idempotent.
  rpc CreateServiceAccount(CreateServiceAccountRequest) returns (CreateServiceAccountResponse);
}

// CreateServiceAccountRequest is parameters for CreateServiceAccount call.
message CreateServiceAccountRequest {
  string ca = 1;   // CN of a CA that signed the host's certificate
  string fqdn = 2; // a host to create an associated service account for (CN of a cert)
  bool force = 3;  // if true, create an account even if the server thinks it exists
}

// CreateServiceAccountResponse is returned by CreateServiceAccount call.
message CreateServiceAccountResponse {
  tokenserver.ServiceAccount service_account = 1; // created service account
}
